--- a/GGJ25_Bubble/Config/DefaultEngine.ini
+++ b/GGJ25_Bubble/Config/DefaultEngine.ini
@@ -90,3 +90,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-2000.000000
+
