Add training room

--- a/GGJ25_Bubble/Config/DefaultEngine.ini
+++ b/GGJ25_Bubble/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/_Game/Maps/Main.Main
+EditorStartupMap=/Game/_Game/Maps/Main.Main
+GlobalDefaultGameMode=/Game/_Game/BubbleGameMode.BubbleGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -92,4 +94,5 @@ ManualIPAddress=
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-2000.000000
+bSubstepping=True
 
