I don't know what i changed :P

--- a/GGJ25_Bubble/Config/DefaultGame.ini
+++ b/GGJ25_Bubble/Config/DefaultGame.ini
@@ -2,6 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=761A2B6F416110042DBB61A02D7C874A
+ProjectName=Bottle Blast Off
+Description=GGJ25 Game
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "D7E1861A49E0E67065B0439B8459193F", "Bottle Blast Off")
 
 [StartupActions]
 bAddPacks=True
@@ -9,3 +12,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
