--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ GGJ25_Bubble/Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 GGJ25_Bubble/DerivedDataCache/*
+/GGJ25_Bubble/Releases
