--- a/GGJ25_Bubble/Config/DefaultEngine.ini
+++ b/GGJ25_Bubble/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Game/Maps/Main.Main
-EditorStartupMap=/Game/_Game/Maps/Main.Main
+GameDefaultMap=/Game/StarterContent/Maps/StarterMap.StarterMap
+EditorStartupMap=/Game/_Game/Maps/TowerLevel.TowerLevel
 GlobalDefaultGameMode=/Game/_Game/BubbleGameMode.BubbleGameMode_C
 
 [/Script/Engine.RendererSettings]
