--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ GGJ25_Bubble/Binaries/*
 GGJ25_Bubble/Plugins/**/Binaries/*
 
 # Builds
+GGJ25_Bubble/Build/*
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !GGJ25_Bubble/Build/*/
