Change physics tick rate

--- a/GGJ25_Bubble/Config/DefaultEngine.ini
+++ b/GGJ25_Bubble/Config/DefaultEngine.ini
@@ -94,6 +94,6 @@ ManualIPAddress=
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-2000.000000
-bSubstepping=True
+bSubstepping=False
 MaxSubsteps=12
 
